--- a/salinasolution/static/assets/css/bootstrap.css
+++ b/salinasolution/static/assets/css/bootstrap.css
@@ -223,7 +223,6 @@ textarea {
 
 body {
   margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 20px;
   color: #333333;
@@ -4356,6 +4355,7 @@ input[type="submit"].btn.btn-mini {
 .navbar {
   *position: relative;
   *z-index: 2;
+  margin-top: 0px;
   margin-bottom: 20px;
   overflow: visible;
 }
@@ -4405,7 +4405,7 @@ input[type="submit"].btn.btn-mini {
 .navbar .brand {
   display: block;
   float: left;
-  padding: 10px 20px 10px;
+  padding: 15px 20px 10px;
   margin-left: -20px;
   font-size: 20px;
   font-weight: 200;
@@ -4590,6 +4590,7 @@ input[type="submit"].btn.btn-mini {
   display: block;
   float: left;
   margin: 0 10px 0 0;
+  margin-top: 20px;
 }
 
 .navbar .nav.pull-right {
@@ -4599,6 +4600,7 @@ input[type="submit"].btn.btn-mini {
 
 .navbar .nav > li {
   float: left;
+  font-size: 17px;
 }
 
 .navbar .nav > li > a {
@@ -4782,20 +4784,20 @@ input[type="submit"].btn.btn-mini {
 }
 
 .navbar-inverse .navbar-inner {
-  background-color: #1b1b1b;
-  background-image: -moz-linear-gradient(top, #222222, #111111);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#222222), to(#111111));
-  background-image: -webkit-linear-gradient(top, #222222, #111111);
-  background-image: -o-linear-gradient(top, #222222, #111111);
-  background-image: linear-gradient(to bottom, #222222, #111111);
+  background-color: #7ba200;
+  background-image: -moz-linear-gradient(top, #7ba200, #546f00);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#7ba200), to(#546f00));
+  background-image: -webkit-linear-gradient(top, #7ba200, #546f00);
+  background-image: -o-linear-gradient(top, #7ba200, #546f00);
+  background-image: linear-gradient(to bottom, #7ba200, #546f00);
   background-repeat: repeat-x;
-  border-color: #252525;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff222222', endColorstr='#ff111111', GradientType=0);
+  border-color: #ffffff;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff7ba200', endColorstr='#ff546f00', GradientType=0);
 }
 
 .navbar-inverse .brand,
 .navbar-inverse .nav > li > a {
-  color: #999999;
+  color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
 
@@ -4807,7 +4809,7 @@ input[type="submit"].btn.btn-mini {
 }
 
 .navbar-inverse .brand {
-  color: #999999;
+  color: #e1ea28;
 }
 
 .navbar-inverse .navbar-text {
@@ -4824,7 +4826,7 @@ input[type="submit"].btn.btn-mini {
 .navbar-inverse .nav .active > a:hover,
 .navbar-inverse .nav .active > a:focus {
   color: #ffffff;
-  background-color: #111111;
+  background-color: #7ba200;
 }
 
 .navbar-inverse .navbar-link {
@@ -4837,7 +4839,7 @@ input[type="submit"].btn.btn-mini {
 }
 
 .navbar-inverse .divider-vertical {
-  border-right-color: #222222;
+  border-right-color: #546f00;
   border-left-color: #111111;
 }
 
@@ -5518,6 +5520,13 @@ input[type="submit"].btn.btn-mini {
   border-right-width: 0;
 }
 
+.tcenter {
+  position: relative;
+  margin-left: -400px;
+  left: 50%;
+  text-align: center;
+}
+
 .thumbnails {
   margin-left: -20px;
   list-style: none;
@@ -5536,7 +5545,7 @@ input[type="submit"].btn.btn-mini {
 }
 
 .row-fluid .thumbnails {
-  margin-left: 0;
+  margin-left: 50;
 }
 
 .thumbnails > li {
@@ -5970,6 +5979,7 @@ a.badge:focus {
   position: relative;
   width: 100%;
   overflow: hidden;
+  padding: 90px 0px 0px 0px;
 }
 
 .carousel-inner > .item {
@@ -6000,7 +6010,7 @@ a.badge:focus {
 .carousel-inner > .next,
 .carousel-inner > .prev {
   position: absolute;
-  top: 0;
+  top: 90px;
   width: 100%;
 }
 
@@ -6027,7 +6037,7 @@ a.badge:focus {
 
 .carousel-control {
   position: absolute;
-  top: 40%;
+  top: 52%;
   left: 15px;
   width: 40px;
   height: 40px;
@@ -6135,6 +6145,7 @@ a.badge:focus {
 
 .pull-right {
   float: right;
+  margin-top: 20px;
 }
 
 .pull-left {
